--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,22 @@ color {
   background: #888;
   border-radius: 5px;
 }
+
+.modal-notif {
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgba(0,0,0,0.4);
+}
+.modal-content-notif {
+background-color: #fefefe;
+margin: 15% auto;
+padding: 20px;
+border: 1px solid #888;
+width: 80%;
+}
