--- a/styles.css
+++ b/styles.css
@@ -124,12 +124,19 @@ h2 {
   right: 0;
 }
 
+.alert.show {
+  opacity: 1;
+  transition: opacity 0.5s linear;
+}
+.alert {
+  opacity: 0;
+  transition: opacity 0.5s linear;
+}
+
 html {
   scroll-behavior: smooth;
 }
-color {
- color: white;
-}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
@@ -141,23 +148,4 @@ color {
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 5px;
-}
-
-.modal-notif {
-display: none;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow: auto;
-background-color: rgba(0,0,0,0.4);
-}
-.modal-content-notif {
-background-color: #fefefe;
-margin: 15% auto;
-padding: 20px;
-border: 1px solid #888;
-width: 80%;
 }
